--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   </head>
   <body>
     <header>
-      <h1>TMDB 평점 Top 20 영화 컬렉션 - 윤기준</h1>
+      <h1>Top 20 Movies by TMDB Ratings</h1>
+      <br />
+      <h3>by Kijoon Yun</h3>
     </header>
     <form class="search" id="search">
-      <label>영화 검색 : </label>
-      <input type="text" id="search-input" placeholder="영화 제목을 검색해 보세요" />
+      <label>Search : </label>
+      <input type="text" id="search-input" placeholder="Search for the title of the movie" />
       <button type="submit" id="search-btn">검색</button>
     </form>
     <section class="card-list"></section>
