update: 가독성 개선 위한 주석 추가 및 JS 변수 선언 적절한 scope로 이동

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <input type="text" id="search-input" placeholder="Search for the title of the movie" />
       <button type="submit" id="search-btn">검색</button>
     </form>
-    <section class="card-list"></section>
+    <section class="card-list" id="card-list"></section>
     <script src="./movie.js"></script>
   </body>
 </html>
